WAM-Studio-SF-Build/force-app/main/default/objects/Workflow_Execution__c/Workflow_Execution__c.object-meta.xml
<CustomObject>
    <description>Run instance of an Automation Template. Part of Salesforce Wealth AI Studio.</description>
    <label>Workflow Execution</label>
    <nameField>
        <displayFormat>WFX-{000000}</displayFormat>
        <label>Workflow Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>