WAM-Studio-SF-Build/force-app/main/default/objects/Workflow_Execution__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workflow Executions</relationshipLabel>
    <relationshipName>WorkflowExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>