WAM-Studio-SF-Build/force-app/main/default/objects/Workflow_Execution__c/fields/Automation_Template__c.field-meta.xml
<CustomField>
    <fullName>Automation_Template__c</fullName>
    <label>Automation Template</label>
    <referenceTo>Automation_Template__c</referenceTo>
    <relationshipLabel>Workflow Executions</relationshipLabel>
    <relationshipName>Workflow_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>