WAM-Studio-SF-Build/force-app/main/default/objects/Workflow_Execution__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>